# investor-egx

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture_report.md
investor_egx/: __init__.py  ai_feed.py  cli.py  config.py  db.py  fees.py  http_utils.py  pipeline.py  prompts.py
investor_egx/sources/: __init__.py  fundamentals.py  prices.py  source_matrix.py  technicals.py  ticker_universe.py
scripts/: bootstrap_db.py  run_full_pipeline.py
sql/: schema_postgres.sql  schema_sqlite.sql
